# perfectSnakeAi

./: .gitmodules  CMakeLists.txt
include/: Hamiltonian.h  Snake.h
src/: Hamiltonian.cpp  Snake.cpp  game.cpp
